--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -13,7 +13,7 @@ body
 section
 {
     position: relative;
-    padding: 100px;
+    padding: 50px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -35,67 +35,56 @@ section .logo
 {
     0%
     {
-        opacity: 0.1;
         left: 90%;
         transform: translateX(20px);
     }
     10%
     {
-        opacity: 0.2;
         left: 80%;
         transform: translateX(20px);
     }
     20%
     {
-        opacity: 0.3;
         left: 70%;
         transform: translateX(20px);
     }
     30%
     {
-        opacity: 0.4;
         left: 60%;
         transform: translateX(20px);
     }
     40%
     {
-        opacity: 0.5;
         left: 50%;
         transform: translateX(20px);
     }
     50%
     {
-        opacity: 0.6;
         left: 40%;
         transform: translateX(20px);
     }
     60%
     {
-        opacity: 0.7;
         left: 30%;
         transform: translateX(20px);
     }
     70%
     {
-        opacity: 0.8;
         left: 20%;
         transform: translateX(20px);
     }
     80%
     {
-        opacity: 0.9;
         left: 10%;
         transform: translateX(20px);
     }
     90%
     {
-        opacity: 1.0;
         left: 0%;
         transform: translateX(20px);
     }
     100%
     {
-        opacity: 0.9;
         left: -10%;
         transform: translateX(20px);
     }
@@ -108,13 +97,11 @@ section .bg
     height: 100%;
     width: 100%;
     object-fit: cover;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 section .content
 {
-    position: relative;
-    max-width: 650px;
-    max-height: 400px;
+    position: relative;    
     z-index: 1;
 }
 section .content h2
@@ -125,9 +112,9 @@ section .content h2
     line-height: 1.1em;
     letter-spacing: 1px;
     
-    animation: animateH2 5s linear infinite;
+    /*animation: animateH2 5s linear infinite;*/
 }
-@keyframes animateH2
+/*@keyframes animateH2
 {
     0%
     {
@@ -141,7 +128,7 @@ section .content h2
     {
         letter-spacing: 2vh;
     }
-}
+}*/
 section .content p
 {
     color: #fff;
@@ -173,6 +160,8 @@ section .content a:hover
 }
 .copyrightText
 {
+    right: 10%;
+    bottom: 10%;
     position: absolute;
     bottom: 20px;
     color: #fff;
