--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -6,10 +6,6 @@
     box-sizing: border-box;
     font-family: 'Poppins', serif;
 }
-body
-{
-    background:#203629;
-}
 section
 {
     position: relative;
@@ -105,10 +101,8 @@ section .box
     align-items: center;
     justify-content: center;
     width: 90%;
-    color: #fff;
-    /*-webkit-box-reflect: below 15px linear-gradient(transparent,transparent,rgba(0,0,0,.2));*/
+    color: #fff;    
 }
-
 section .box:before
 {
     content: '';
@@ -122,7 +116,6 @@ section .box:before
     filter: url(#wavy);
     opacity: 50%;
 }
-
 section .box:after
 {
     content: '';
@@ -135,69 +128,136 @@ section .box:after
     border-right: none;
     filter: url(#wavy);
     background: rgba(255,255,255,.1);
-    /*opacity: 50%;*/
 }
 section .box .content
 {
-    /*border: solid 1px #fff;*/
     padding-left: 15px;
     position: relative;  
     z-index: 1;
 }
 section .content h2
 {
-    
     color: #fff;
     font-size: 3em;
     font-weight: 700;
     line-height: 1.1em;
     letter-spacing: 1px;
-    
-    /*animation: animateH2 5s linear infinite;*/
 }
-/*@keyframes animateH2
-{
-    0%
-    {
-        letter-spacing: 2vh;
-    }
-    50%
-    {
-        letter-spacing: 1vh;
-    }
-    100%
-    {
-        letter-spacing: 2vh;
-    }
-}*/
 section .content p
 {
     color: #fff;
     letter-spacing: 1px;
     font-size: 1.1em;
-    margin: 20px 0 10px;
-    /*text-transform: uppercase;*/
+    margin: 20px 0 10px;    
 }
 section .content a
 {    
-    position: absolute;    
-    font-size: 1em;
-    text-decoration: none;
-    padding: 10px 30px;
-    display: inline-block;
-    color: #203629;    
-    background:#FFBF00;
+    position: absolute;   
+    display: inline-block; 
+    padding: 10px 30px;    
     margin: 20px 0;
+    color: #203629;   
+    font-size: 1em;
+    text-decoration: none;         
+    background:#FFBF00;    
     font-weight: 500;
-    border: 1px solid #FFBF00;    
+    border: 1px solid #FFBF00;  
+    overflow: hidden;
+    transition: 0.5s;      
 }
-
-  /*  background: linear-gradient(315deg,#ff0057,#e64a19);*/
-
 section .content a:hover
 {
     color: #FFBF00;
     background: #203629;
+    box-shadow: 0 0 5px #203629,0 0 25px #203629,0 0 50px #203629,0 0 200px #203629;
+}
+section .content a span
+{
+    position: absolute;
+    display: block;    
+}
+section .content a span:nth-child(1)
+{
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg,transparent,#203629);
+    animation: animSpan1 1s linear infinite;
+}
+@keyframes animSpan1
+{
+    0%
+    {
+          left: -100%;
+    }
+    50%,100%
+    {
+          left: 100%;
+    }
+}
+section .content a span:nth-child(2)
+{
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg,transparent,#203629);
+    animation: animSpan2 1s linear infinite;
+    animation-delay: 0.25s;
+}
+@keyframes animSpan2
+{
+    0%
+    {
+          top: -100%;
+    }
+    50%,100%
+    {
+          top: 100%;
+    }
+}
+section .content a span:nth-child(3)
+{
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg,transparent,#203629);
+    animation: animSpan3 1s linear infinite;
+    animation-delay: 0.5s;
+}
+@keyframes animSpan3
+{
+    0%
+    {
+        right: -100%;
+    }
+    50%,100%
+    {
+        right: 100%;
+    }
+}
+section .content a span:nth-child(4)
+{
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg,transparent,#203629);
+    animation: animSpan4 1s linear infinite;
+    animation-delay: 0.75s;
+}
+@keyframes animSpan4
+{
+    0%
+    {
+        bottom: -100%;
+    }
+    50%,100%
+    {
+        bottom: 100%;
+    }
 }
 .copyrightText
 {
