--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -22,67 +22,78 @@ section .logo
     color: #fff;
     font-weight: 600;
     font-size: 3em;
-    z-index: 100;
+    z-index: 1001;
     letter-spacing: 1vh;
-    cursor: pointer;
-    animation: animate 10s linear infinite;
+    cursor: default;    
+    animation: animate 7s linear infinite;
 }
 @keyframes animate
 {
     0%
     {
         left: 90%;
-        transform: translateX(20px);
+        transform: translateX(20px); 
+        letter-spacing: 2vh;       
     }
     10%
     {
         left: 80%;
-        transform: translateX(20px);
+        transform: translateX(20px);   
+        letter-spacing: 3vh;     
     }
     20%
     {
         left: 70%;
         transform: translateX(20px);
+        letter-spacing: 4vh;
     }
     30%
     {
         left: 60%;
         transform: translateX(20px);
+        letter-spacing: 5vh;
     }
     40%
     {
         left: 50%;
         transform: translateX(20px);
+        letter-spacing: 6vh;
     }
     50%
     {
         left: 40%;
         transform: translateX(20px);
+        letter-spacing: 6vh;
     }
     60%
     {
         left: 30%;
         transform: translateX(20px);
+        letter-spacing: 5vh;
     }
     70%
     {
         left: 20%;
         transform: translateX(20px);
+        letter-spacing: 4vh;
     }
     80%
     {
         left: 10%;
         transform: translateX(20px);
+        letter-spacing: 3vh;
     }
     90%
     {
         left: 0%;
         transform: translateX(20px);
+        letter-spacing: 2vh;
     }
     100%
     {
         left: -10%;
         transform: translateX(20px);
+        letter-spacing: 1vh;
     }
 }
 section .bg
@@ -261,7 +272,7 @@ section .content a span:nth-child(4)
 }
 .copyrightText
 {
-    right: 10%;
+    right: 50%;
     bottom: 10%;
     position: absolute;
     bottom: 20px;
